# LAI_scheduler_update

./: .gitignore  BUILD.md  Implementation_plan.md  Janssen_LAI_scheduler_V1.py  Otsuka_LAI_scheduler.py  README.md  SHMH_LAI_scheduler.py  USAGE.md  USAGE_Otsuka.md  drug_adherence.md  lai_schedule_data_final.json  pyproject.toml
